add parameter in svg editor and do some cleanup

--- a/BlazorSvgEditor.SvgEditor/SvgEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/SvgEditor.razor
@@ -4,7 +4,7 @@
 @using BlazorSvgEditor.SvgEditor.Helper
 
 
-<div class="@_containerCssClass" style="border: 3px solid black; height: 100%; width: 100%;" @ref="ContainerElementReference"
+<div class="@_containerCssClass" style="@_containerCssStyle height: 100%; width: 100%;" @ref="_containerElementReference"
      @onwheel="OnContainerWheel"
      
      oncontextmenu="return false"
@@ -17,7 +17,7 @@
 
     <svg style="height: 100%; width: 100%;">
 
-        <g style="transform: translate(@(Translate.X.ToInvariantString())px, @(Translate.Y.ToInvariantString())px) scale(@Scale.ToInvariantString())" viewbox="0 0 @ImageSize.Width @ImageSize.Height" @ref="SvgGElementReference">
+        <g style="transform: translate(@(Translate.X.ToInvariantString())px, @(Translate.Y.ToInvariantString())px) scale(@Scale.ToInvariantString())" viewbox="0 0 @ImageSize.Width @ImageSize.Height">
             <image href="@ImageSource"/>
             
             <rect height="@(ImageSize.Height)px" fill="transparent" width="@(ImageSize.Width)px" @onpointerdown="OnUnselectPanelPointerDown"></rect>
@@ -28,30 +28,32 @@
             }
         </g>
         
-        <foreignObject height="94px" width="240px" class="unselectable" x="0" y="0" style="font-size:14px;pointer-events:none;touch-action:none; background-color: white">
-            <b>Scale</b> 1:@(Math.Round(Scale, 3).ToString())
-            <br/>
-            <b>Translate:</b> X: @(Math.Round(Translate.X, 1))px Y: @(Math.Round(Translate.Y, 1))px
-            <br/>
-            <b>Pointer Offset:</b> X: @(_pointerPosition.X)px Y: @(_pointerPosition.Y)px
-            <br/>
-            <b>Detramsform:</b> X: @(Math.Round((_pointerPosition.X - Translate.X) / Scale, 1))px Y: @(Math.Round(_pointerPosition.Y / Scale - Translate.Y / Scale, 1))px
-        </foreignObject>
-
-        <foreignObject height="46px" width="250px" class="unselectable" x="0px" y="100" style="font-size:14px;pointer-events:none;touch-action:none; background-color: white">
-            <b>Svg G Box:</b> X: @(Math.Round(SvgBoundingBox.Width, 1))px Y: @(Math.Round(SvgBoundingBox.Height, 1))px
-            <br/>
-            <b>ContainerBox:</b> X: @(Math.Round(ContainerBoundingBox.Width, 1))px Y: @(Math.Round(ContainerBoundingBox.Height, 1))px
-        </foreignObject>
-        
-        <foreignObject visibility="hidden" height="70px" width="300px" class="unselectable" x="0px" y="150" style="font-size:14px;pointer-events:none;touch-action:none; background-color: white">
-            @foreach(var shape in Shapes)
-            {
-                @shape.ToString()
+        @if (ShowDiagnosticInformation)
+        {
+            <foreignObject height="94px" width="240px" class="unselectable" x="0" y="0" style="font-size:14px;pointer-events:none;touch-action:none; background-color: white">
+                <b>Scale</b> 1:@(Math.Round(Scale, 3).ToString())
                 <br/>
-            }
-           
-        </foreignObject>
+                <b>Translate:</b> X: @(Math.Round(Translate.X, 1))px Y: @(Math.Round(Translate.Y, 1))px
+                <br/>
+                <b>Pointer Offset:</b> X: @(_pointerPosition.X)px Y: @(_pointerPosition.Y)px
+                <br/>
+                <b>Detramsform:</b> X: @(Math.Round((_pointerPosition.X - Translate.X) / Scale, 1))px Y: @(Math.Round(_pointerPosition.Y / Scale - Translate.Y / Scale, 1))px
+            </foreignObject>
+
+            <foreignObject height="46px" width="250px" class="unselectable" x="0px" y="100" style="font-size:14px;pointer-events:none;touch-action:none; background-color: white">
+                <b>ContainerBox:</b> X: @(Math.Round(_containerBoundingBox.Width, 1))px Y: @(Math.Round(_containerBoundingBox.Height, 1))px
+            </foreignObject>
+        
+            <foreignObject visibility="hidden" height="120px" width="300px" class="unselectable" x="0px" y="150" style="font-size:14px;pointer-events:none;touch-action:none; background-color: white">
+                @foreach(var shape in Shapes)
+                {
+                    @shape.ToString()
+                    <br/>
+                }
+            </foreignObject>
+        }
+        
+        
 
     </svg>
 
