file sorting and little performance improvements

--- a/BlazorSvgEditor.WasmTest/Pages/Index.razor
+++ b/BlazorSvgEditor.WasmTest/Pages/Index.razor
@@ -1,6 +1,8 @@
 ﻿@page "/"
 @using BlazorSvgEditor.SvgEditor
+@using BlazorSvgEditor.SvgEditor.Editor
 @using BlazorSvgEditor.SvgEditor.Helper
+@using SvgEditor = BlazorSvgEditor.SvgEditor.Editor.SvgEditor
 
 <div class="siteContainer">
     <div class="editor">
