--- a/BlazorSvgEditor.SvgEditor/ShapeEditors/CircleEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/ShapeEditors/CircleEditor.razor
@@ -1,4 +1,5 @@
 @using BlazorSvgEditor.SvgEditor.Helper
+@using BlazorSvgEditor.SvgEditor.Editor
 @inherits ShapeEditor<Circle>
 
 <circle @ref=ElementReference
