--- a/BlazorSvgEditor.SvgEditor/ShapeEditors/PolygonEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/ShapeEditors/PolygonEditor.razor
@@ -1,4 +1,5 @@
 @using BlazorSvgEditor.SvgEditor.Helper
+@using BlazorSvgEditor.SvgEditor.Editor
 @inherits ShapeEditor<Polygon>
 
 <polygon @ref=ElementReference
