--- a/BlazorSvgEditor.SvgEditor/ShapeEditors/RectangleEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/ShapeEditors/RectangleEditor.razor
@@ -1,4 +1,5 @@
 @using BlazorSvgEditor.SvgEditor.Helper
+@using BlazorSvgEditor.SvgEditor.Editor
 @inherits ShapeEditor<Rectangle>
 
 <rect @ref=ElementReference
