--- a/BlazorSvgEditor.SvgEditor/ShapeEditors/PolygonEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/ShapeEditors/PolygonEditor.razor
@@ -1,5 +1,5 @@
 @using BlazorSvgEditor.SvgEditor.Helper
-@using BlazorSvgEditor.SvgEditor.Editor
+@using BlazorSvgEditor.SvgEditor.Shapes
 @inherits ShapeEditor<Polygon>
 
 <polygon @ref=ElementReference
@@ -16,10 +16,10 @@
          stroke-linecap="@SvgElement.StrokeLinecap"
          stroke-linejoin="@SvgElement.StrokeLinejoin"
          stroke-dasharray="@SvgElement.StrokeDasharray"
-         stroke-dashoffset="@SvgElement.StrokeDashoffset.ToInvariantString()"
+         stroke-dashoffset="@SvgElement.StrokeDashoffset.ToInvString()"
 
          fill="@SvgElement.Fill"
-         fill-opacity="@SvgElement.FillOpacity.ToInvariantString()"
+         fill-opacity="@SvgElement.FillOpacity.ToInvString()"
 
          style="cursor: @(SvgElement.State == ShapeState.Selected ? "move" : "pointer")">
 
