--- a/BlazorSvgEditor.SvgEditor/ShapeEditors/RectangleEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/ShapeEditors/RectangleEditor.razor
@@ -1,5 +1,5 @@
 @using BlazorSvgEditor.SvgEditor.Helper
-@using BlazorSvgEditor.SvgEditor.Editor
+@using BlazorSvgEditor.SvgEditor.Shapes
 @inherits ShapeEditor<Rectangle>
 
 <rect @ref=ElementReference
@@ -10,19 +10,19 @@
       @onpointerleave="Leave"
 
       
-      x=@SvgElement.X.ToInvariantString()
-      y=@SvgElement.Y.ToInvariantString()
-      width=@SvgElement.Width.ToInvariantString()
-      height=@SvgElement.Height.ToInvariantString()
+      x=@SvgElement.X.ToInvString()
+      y=@SvgElement.Y.ToInvString()
+      width=@SvgElement.Width.ToInvString()
+      height=@SvgElement.Height.ToInvString()
       stroke="@SvgElement.Stroke"
       stroke-width="@SvgElement.StrokeWidth"
       stroke-linecap="@SvgElement.StrokeLinecap"
       stroke-linejoin="@SvgElement.StrokeLinejoin"
       stroke-dasharray="@SvgElement.StrokeDasharray"
-      stroke-dashoffset="@SvgElement.StrokeDashoffset.ToInvariantString()"
+      stroke-dashoffset="@SvgElement.StrokeDashoffset.ToInvString()"
       
       fill="@SvgElement.Fill"
-      fill-opacity="@SvgElement.FillOpacity.ToInvariantString()"
+      fill-opacity="@SvgElement.FillOpacity.ToInvString()"
 
       style="cursor: @(SvgElement.State == ShapeState.Selected ? "move" : "pointer")">
 
