--- a/BlazorSvgEditor.SvgEditor/ShapeEditors/RectangleEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/ShapeEditors/RectangleEditor.razor
@@ -31,8 +31,8 @@
 
 @if (SvgElement.State == ShapeState.Selected && SvgElement.SvgEditor.EditMode != EditMode.Add && SvgElement.SvgEditor.EditMode != EditMode.Move)
 {
-      <Anchor OnPointerDown="() => OnAnchorSelected(0)" CssCursor="nwse-resize" Position="new Coord<double>(SvgElement.X, SvgElement.Y)" />
-      <Anchor OnPointerDown="() => OnAnchorSelected(1)" CssCursor="nesw-resize" Position="new Coord<double>(SvgElement.X + SvgElement.Width, SvgElement.Y)" />
-      <Anchor OnPointerDown="() => OnAnchorSelected(2)" CssCursor="nwse-resize" Position="new Coord<double>(SvgElement.X + SvgElement.Width, SvgElement.Y + SvgElement.Height)" />
-      <Anchor OnPointerDown="() => OnAnchorSelected(3)" CssCursor="nesw-resize" Position="new Coord<double>(SvgElement.X, SvgElement.Y + SvgElement.Height)" />
+      <Anchor OnPointerDown="() => OnAnchorSelected(0)" CssCursor="nwse-resize" Position="new Coord<double>(SvgElement.X, SvgElement.Y)" SvgEditor="SvgElement.SvgEditor"/>
+      <Anchor OnPointerDown="() => OnAnchorSelected(1)" CssCursor="nesw-resize" Position="new Coord<double>(SvgElement.X + SvgElement.Width, SvgElement.Y)" SvgEditor="SvgElement.SvgEditor"/>
+      <Anchor OnPointerDown="() => OnAnchorSelected(2)" CssCursor="nwse-resize" Position="new Coord<double>(SvgElement.X + SvgElement.Width, SvgElement.Y + SvgElement.Height)" SvgEditor="SvgElement.SvgEditor"/>
+      <Anchor OnPointerDown="() => OnAnchorSelected(3)" CssCursor="nesw-resize" Position="new Coord<double>(SvgElement.X, SvgElement.Y + SvgElement.Height)" SvgEditor="SvgElement.SvgEditor"/>
 }
