--- a/BlazorSvgEditor.SvgEditor/SvgEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/SvgEditor.razor
@@ -16,7 +16,7 @@
      @onpointerup="OnContainerPointerUp">
 
 
-    @if (_showLoadingSpinner)
+    @if (ShowLoadingSpinner)
     {
         @LoadingSpinner
     }
